syntax = "proto3";

package rivet.backend.pkg.db.game_version_prepare;

import "proto/common.proto";
import "proto/backend/db.proto";

message Request {
	rivet.backend.db.GameVersionConfig config = 1;
	rivet.common.Uuid team_id = 2;
	rivet.common.Uuid game_id = 3;
}

message Response {
	rivet.backend.db.GameVersionConfigCtx config_ctx = 1;
}
